--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,15 @@ ul#menu >li {
   padding: 0 20px;
 }
 
+.link-menu {
+  font-size: 15px;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  text-transform: uppercase;
+}
+
 main {
   width: 100%;
-  /* background-color: grey; */
   margin: 10px 0;
 }
 main::after{
@@ -83,38 +89,56 @@ main::after{
   background: white;
   float: left;
   border-radius: 8px;
+  padding: 10px;
+  position: relative;
 }
-#lt{
+.left-title{
   color: grey;
-  font-size: 35px;
+  font-size: 25px;
   line-height: 35px;
-  padding: 0 30px;
-  display: inline-block;
+  font-family: 'Roboto', sans-serif;
+  float: right;
+  position: relative;
+  text-align: center;
 }
 
-.fas fa-rss {
+i {
+  color: white;
+}
+
+.fas .fa-rss {
+  font-size: 20px;
+  background-color: orange;
+  /* color: white; */
+  text-align: center;
+  /* padding: 10px */
+}
+
+.rss {
+  width: 30px;
+  height: 30px;
+  background: orange;
+  padding: 5px;
+  border-radius: 5px;
+  display: inline-block;
+  position: absolute;
+  left:10;
 }
 a {
   color:green;
   text-decoration: none;
   font-size: 20px;
   font-weight: bold;
-  padding: 10px
 }
-ul#links {
+ul.links {
   list-style: none;
-  height: 50px;
   line-height: 16px;
   text-align: left;
-  display: inline-block;
-  padding: 15px 15px 15px 15px;
-  text-align: justify;
+  font-family: 'Roboto', sans-serif;
+  /* text-align: justify; */
+  /* display: inline-block; */
 }
 
-/* ul#links {
-  display: inline-block;
-  padding: 30px;
-} */
 
 .center {
   width: 50%;
@@ -127,13 +151,16 @@ ul#links {
   line-height: 30px;
 }
 
-#ct{
+.central-title{
   color: grey;
   text-transform: uppercase;
+  font-family: 'Roboto', sans-serif;
+  text-shadow: 1px 1px black;
 }
 
 p {
   color: black;
+  font-family: 'Roboto', sans-serif;
 }
 
 .right-col {
@@ -151,9 +178,10 @@ p {
   background: white;
 }
 
-.wt {
+.widget-title {
   color: grey;
   margin-bottom: 20px;
+  font-family: 'Roboto', sans-serif;
 }
 
 footer {
@@ -184,4 +212,5 @@ footer {
 
 .icon-container i {
   font-size: 30px;
+  color: lightgrey
 }
